<resources>
    <string name="app_name">Clipsy</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="insert">Insert</string>

    <!-- Insert Table -->
    <string name="title_insert_table">Insert Table</string>
    <string name="hint_no_of_columns">Number of columns</string>
    <string name="hint_no_of_rows">Number of rows</string>

    <!-- Insert Link -->
    <string name="title_insert_link">Insert Link</string>
    <string name="hint_text_to_display">Text to display</string>
    <string name="hint_link_to">Link to</string>


    <!-- app  -->


    <!--network-->

    <!--user-->
    <string name="request_user_sign_up">https://api.pitavya.com/clipsy/signup/</string>
    <string name="request_user_verify_email">https://api.pitavya.com/clipsy/verify_email_verification</string>
    <string name="request_user_sign_in">https://api.pitavya.com/clipsy/signin</string>
    <string name="request_user_get_user">https://api.pitavya.com/clipsy/get/%1$s</string>
    <string name="request_user_update_avatar">https://api.pitavya.com/clipsy/update_avatar/%1$s</string>
    <string name="request_user_update_password">https://api.pitavya.com/clipsy/update_password</string>
    <string name="request_user_search_user">https://api.pitavya.com/clipsy/search/%1$s</string>
    <string name="request_user_searched_user">https://api.pitavya.com/clipsy/searched/%1$s</string>
    <string name="request_user_searched_top10">https://api.pitavya.com/clipsy/searched</string>
    <string name="request_user_delete_searched">https://api.pitavya.com/clipsy/deleteSearched/%1$s</string>



    <string name="request_user_forgot_password">https://api.pitavya.com/clipsy/forgot_password</string>

    <!--clip-->
    <string name="request_clip_create">https://api.pitavya.com/clipsy/create_clip</string>
    <string name="request_clip_read">https://api.pitavya.com/clipsy/read_clip/%1$s</string>
    <string name="request_clip_update">https://api.pitavya.com/clipsy/update_clip/%1$s</string>
    <string name="request_clip_delete">https://api.pitavya.com/clipsy/update_clip/%1$s</string>


    <string name="request_clip_reads">https://api.pitavya.com/clipsy/read_clips</string>
    <string name="request_clip_reads_user">https://api.pitavya.com/clipsy/read_clips/%1$s</string>

    <string name="request_clip_following">https://api.pitavya.com/clipsy/following_clips</string>


    <string name="response_invalid_clip_id">-1</string>


    <!--user user-->

    <string name="request_user_user_follow">https://api.pitavya.com/clipsy/follow/%1$s</string>
    <string name="request_user_user_unfollow">https://api.pitavya.com/clipsy/unfollow/%1$s</string>

    <!--
    <string name="request_user_user_following">https://api.pitavya.com/clipsy/following</string>
    <string name="request_user_user_follower">https://api.pitavya.com/clipsy/follower</string>
    -->

    <string name="request_user_user_following">https://api.pitavya.com/clipsy/following/%1$s</string>
    <string name="request_user_user_follower">https://api.pitavya.com/clipsy/follower/%1$s</string>

    <string name="request_user_user_profile_matrix">https://api.pitavya.com/clipsy/profile_matrix/%1$s</string>


    <!--params-->


    <string name="header_authentication">Authentication</string>

    <!--messages of response-->


    <!--api response-->

    <string name="apiResponse_success_true">1</string>

    <!--Signup page constants-->

    <string name="message_signup_account_created">Account Created</string>


    <string name="status_email_verification_email_verified">1</string>
    <string name="status_email_verification_email_unverified">0</string>

    <string name="status_signin_failed">0</string>

    <string name="status_success">1</string>


    <string name="bundle_param_caller_activity_to_email_verification">callback</string>
    <string name="bundle_param_caller_activity_to_fragment_clips">where_to_home</string>

    <string name="bundle_param_caller_activity_fragment_profile_list_to_profile_result">profile_list_to_complete_profile</string>
    <string name="bundle_param_caller_fragment_clip_profile_to_profile_result">bundle_param_caller_fragment_clip_profile_to_profile_result</string>


    <string name="bundle_param_caller_button_to_profile_list">profile_list</string>

    <string name="bundle_param_caller_button_followers">follower</string>
    <string name="bundle_param_caller_button_following">following</string>


    <string name="bundle_param_caller_activity_panel">panel</string>
    <string name="bundle_param_caller_activity_fragment_search">fragment_search</string>


    <string name="bundle_param_profile_result_searched_user_id">searched_id</string>


    <!--clip-->


    <!--params-->


    <string name="params_search_id">search_id</string>
    <string name="params_email">email</string>
    <string name="params_password">password</string>
    <string name="params_name">name</string>
    <string name="params_type">type</string>
    <string name="params_token">token</string>
    <string name="params_id">id</string>

    <string name="params_value_public">2</string>

    <string name="params_verify_token">verify_token</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="clips">Clips</string>
    <string name="follow">Follow</string>
    <string name="profile_email">Profile email</string>
    <string name="profile_name">Profile name</string>
    <string name="hell_world">hell world</string>
    <string name="author_id">author id</string>
    <string name="_20_march_2018">20 march 2018</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="signup">Create Account</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="email_address">email address</string>
    <string name="send_verification_code">Send verification Code</string>
    <string name="name">name</string>
    <string name="updateName">New Name</string>
    <string name="verify">Verify</string>
    <string name="token">Your 6 letter code from email</string>
    <string name="update_password">Update Password</string>
    <string name="new_password">new password</string>
    <string name="Submit">Submit</string>


    <string name="confirm_new_password">confirm new password</string>
    <string name="name_or_email">name or email</string>
    <string name="start_typing">Start Typing</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete ?</string>
    <string name="message_unsaved_clip">You have unsaved changes in Clip.</string>
    <string name="message_nonet">Network unavailable.</string>


    <string name="are_you_sure_you_want_to_exit">Ready to leave?</string>
    <string name="delete">Delete</string>
    <string name="Yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="No">No</string>


    <string name="edit">Edit</string>
    <string name="close">Close</string>
    <string name="closeApp">Close App</string>
    <string name="write" formatted="false">Add Clip</string>
    <string name="sign_out">Sign Out</string>
    <string name="notification">Notification</string>


    <string name="save">Save</string>
    <string name="Continue">Continue</string>
    <string name="tryAgain">Try Again</string>


    <string name="title">title</string>
    <string name="editor_title">Add Clip</string>


    <string name="edit_avatar">Edit Avatar</string>
    <string name="view_profile">View Profile</string>

    <string name="edit_profile">Edit Profile</string>

    <string name="report">Report</string>
    <string name="Inappropriate">Inappropriate</string>
    <string name="Spam">Spam</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account.</string>
    <string name="log_in">Log In</string>
    <string name="trouble_logging_in">Trouble logging in</string>
    <string name="we_have_send_an_email_with_a_token_use_that_to_verify_your_email_it_may_take_2_minutes_to_get_the_email">Paste 6 letter code from the email.</string>
    <string name="email_verification_pre_help">An email with a code will be send to your email account.</string>



</resources>
