<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/create_menu_write"
        android:orderInCategory="400"
        android:title="@string/save"
        android:visible="true"
        app:showAsAction="always"
        android:icon="@drawable/round_save_black_48"
        />
    <!--
    <item
        android:id="@+id/create_menu_close"
        android:orderInCategory="500"
        android:title="@string/save"
        android:visible="true"
        app:showAsAction="always"
        android:icon="@drawable/outline_close_black"
        />
        -->
    <item
        android:id="@+id/action_undo"
        android:orderInCategory="100"
        android:icon="@drawable/ic_undo"
        android:title="@string/action_undo"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_redo"
        android:orderInCategory="200"
        android:icon="@drawable/ic_redo"
        android:title="@string/action_redo"
        app:showAsAction="always" />

</menu>
