<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_same_user_menu"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_other_user_show_report_inappropriate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:padding="12dp"
        android:text="@string/Inappropriate"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dialog_other_user_show_report_spam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:padding="12dp"
        android:text="@string/Spam"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dialog_other_user_show_report_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:padding="12dp"
        android:text="@string/close"
        android:textSize="16sp" />


</LinearLayout>