<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/verifyEmailView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.email_verification">

    <TextView
        android:id="@+id/email_verification_status_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <!--verify token -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/verify_token"
            style="@style/primaryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/token"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/verify_token_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/we_have_send_an_email_with_a_token_use_that_to_verify_your_email_it_may_take_2_minutes_to_get_the_email"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/send_verify_token"
        style="@style/primaryBigButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify" />

</LinearLayout>