<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_backbutton_menu"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/dialog_backutton_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/are_you_sure_you_want_to_exit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/dialog_backbutton_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="0.5"
        android:background="@color/grey_50"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/Yes"
         />

    <TextView
        android:id="@+id/dialog_backbutton_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="0.5"
        android:background="@color/grey_50"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/No" />

    </LinearLayout>

</LinearLayout>