<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_unsaved_clip_menu"
    android:layout_width="300dp"
    android:padding="10dp"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_unsaved_clip_menu_message"
        android:layout_width="match_parent"
        android:fontFamily="sans-serif-medium"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="center_horizontal"
        android:text="@string/message_unsaved_clip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/dialog_unsaved_clip_menu_save"
        android:fontFamily="sans-serif-medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_margin="4dp"
        android:layout_weight="0.5"
        android:gravity="center_horizontal"
        android:text="@string/save"
        android:background="@color/grey_50"
        />

    <TextView
        android:fontFamily="sans-serif-medium"
        android:id="@+id/dialog_unsaved_clip_menu_close"
        android:layout_width="wrap_content"
        android:layout_weight="0.5"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_margin="4dp"
        android:gravity="center_horizontal"
        android:background="@color/grey_50"
        android:text="@string/close" />

    </LinearLayout>

</LinearLayout>