<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="0sp"
    app:cardElevation="0dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <!-- row 1 => user pic | name | ago-->

        <LinearLayout
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="0.2"
            android:padding="4dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/rl_profile_profile_pic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:src="@drawable/boy003" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:layout_marginStart="2dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rl_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:text="@string/hell_world"
                android:textStyle="bold" />

            <!-- ids -->
            <TextView
                android:id="@+id/rl_profile_id"
                android:layout_width="wrap_content"
                android:layout_height="16sp"
                android:text="@string/author_id"
                android:textStyle="bold"
                android:visibility="gone" />

            <!-- row 2 => title -->
            <TextView
                android:id="@+id/rl_profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="12sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/grey_300" />

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>