<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_unsaved_clip_menu"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/activityPadding">

    <TextView
        android:id="@+id/dialog_unsaved_clip_menu_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/message_nonet" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_nonet_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="0.5"
            android:background="@color/grey_50"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/tryAgain" />

        <TextView
            android:id="@+id/dialog_nonet_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="0.5"
            android:background="@color/grey_50"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/close"
             />

    </LinearLayout>

</LinearLayout>