<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/changePasswordView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.change_password">

    <TextView
        android:id="@+id/change_password_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/red_500" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/change_password_token"
            style="@style/primaryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/token"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/change_password_token_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red_500" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/change_password_new_password"
            style="@style/primaryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/change_password_new_password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red_500" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/change_password_confirm_new_password"
            style="@style/primaryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/change_password_confirm_new_password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red_500" />


    <Button
        style="@style/primaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="update_password"
        android:text="@string/update_password" />
</LinearLayout>