<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_landing_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/baseMargin"
    android:background="@color/grey_300"
    android:orientation="vertical"
    tools:context=".panel.fragments.fragment_profile">


    <LinearLayout
        android:id="@+id/fragment_profile_contet_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/basePadding"
        android:visibility="visible">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:orientation="vertical">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/choose_avatar_icon"
                android:layout_width="@dimen/profile_card_image_size"
                android:layout_height="@dimen/profile_card_image_size"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/todo"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/grey_500"
                android:src="@drawable/boy" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_card_element_padding"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="name"
                    android:textSize="@dimen/profile_card_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fragment_profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/profile_card_content" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/profile_card_element_padding"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/fragment_profile_clips_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/fragment_profile_clips_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="2"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/fragment_profile_clips"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.1"
                            android:text="@string/clips"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/fragment_profile_followers_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/fragment_profile_followers_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="3"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/fragment_profile_followers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.1"
                            android:text="@string/followers"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/fragment_profile_following_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/fragment_profile_following_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="22"
                            android:textColor="@color/black"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/fragment_profile_following"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.1"
                            android:text="@string/following"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/profile_card_element_padding"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/rx"
                        style="@style/primaryButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="16dp"
                        android:padding="4dp"
                        android:text="@string/follow"
                        android:textAllCaps="false" />


                    <!--style="@style/noStyleButton"-->
                    <Button
                        android:id="@+id/profile_edit"

                        style="@style/primaryButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="16dp"
                        android:padding="4dp"
                        android:text="Edit Profile"
                        android:textAllCaps="false" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/profile_landing_id"
            android:layout_width="wrap_content"
            android:layout_height="16sp"
            android:minWidth="30dp"
            android:minHeight="12dp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/profile_landing_viewer_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_id"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>
</LinearLayout>
